feat: add logging on wandb

--- a/fine_tuning.ipynb
+++ b/fine_tuning.ipynb
@@ -11,8 +11,7 @@
      "output_type": "stream",
      "text": [
       "d:\\pr\\exact_match_bert\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -63,13 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5693d0b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dataset = DataLoader(train_data, batch_size=32, shuffle=True, num_workers=4 or 8)\n",
-    "val_dataset = DataLoader(val_data, batch_size=32, shuffle=True, num_workers=4 or 8)"
+    "val_dataset = DataLoader(val_data, batch_size=32, num_workers=4 or 8)"
    ]
   },
   {
