small changes in eda

--- a/data/eda.ipynb
+++ b/data/eda.ipynb
@@ -128,6 +128,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "388bab08",
+   "metadata": {},
+   "source": [
+    "## Distribution of examples by text length"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "434b9be0",
@@ -147,6 +155,23 @@
    "source": [
     "plt.hist(df[\"symbols\"], bins=20, edgecolor=\"black\")\n",
     "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81a5007e",
+   "metadata": {},
+   "source": [
+    "## Class disbalance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbb764d4",
+   "metadata": {},
+   "source": [
+    "1 - \"обеспечение исполнения контракта\"\n",
+    "0 - \"обеспечение гарантийных обязательств\""
    ]
   },
   {
